--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vuepress-plugin-mathjax",
-  "version": "1.2.8",
+  "name": "vuepress-plugin-mathjax-nilnon",
+  "version": "1.2.9",
   "main": "src/index.js",
   "description": "A VuePress plugin which supports TeX syntax in markdown files.",
   "author": "Shigma <1700011071@pku.edu.cn>",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "lru-cache": "^5.1.1",
-    "mathjax3": "3.0.0-beta.3",
+    "mathjax-full": "3.2.2",
     "vuepress-mergeable": "^1.0.2"
   },
   "keywords": [
